samples/_failures_safe/1761645022_4890bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f41c1bdc.c: In function ‘main’:
./samples/SAFE/__tmp_f41c1bdc.c:160:12: error: missing terminating " character
  160 |     printf("Enter number
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_f41c1bdc.c:160:5: error: expected expression at end of input
  160 |     printf("Enter number
      |     ^~~~~~
./samples/SAFE/__tmp_f41c1bdc.c:160:5: error: expected declaration or statement at end of input
